--- a/index.html
+++ b/index.html
@@ -36,8 +36,17 @@
             maxlength="35"
             required
           />
-          <label for="age">Your Age</label>
-          <input type="number" name="age" id="age" min="21" max="120" />
+          <label for="age"
+            >Your Age <span class="required-field">*</span></label
+          >
+          <input
+            type="number"
+            name="age"
+            id="age"
+            min="21"
+            max="120"
+            required
+          />
         </div>
 
         <fieldset>
@@ -45,7 +54,7 @@
           <label for="email"
             >Your Email<span class="required-field">*</span></label
           >
-          <input type="text" id="email" name="email" required />
+          <input type="email" id="email" name="email" required />
           <label for="address">Your Street Address</label>
           <input type="text" id="address" name="address" />
           <label for="city">Your City</label>
